--- a/leaderboard/shock/index.html
+++ b/leaderboard/shock/index.html
@@ -711,8 +711,8 @@
 <script src="/js/particles.js"></script>
 <script src="/js/toast.js"></script>
 <script>
-const CURRENT_API_URL = 'https://colebeardata.onrender.com/leaderboard/top14';
-const PREVIOUS_API_URL = 'https://colebeardata.onrender.com/leaderboard/prev';
+const CURRENT_API_URL = 'https://gambizarddata.vercel.app/leaderboard/top14';
+const PREVIOUS_API_URL = 'https://gambizarddata.vercel.app/leaderboard/prev';
 const roobetLogo = '/assets/rainbetlogo.png';
 const rewards = [125, 200, 100, 50, 25];
 
