--- a/leaderboard/shock/index.html
+++ b/leaderboard/shock/index.html
@@ -714,7 +714,7 @@
 const CURRENT_API_URL = 'https://gambizarddata.vercel.app/leaderboard/top14';
 const PREVIOUS_API_URL = 'https://gambizarddata.vercel.app/leaderboard/prev';
 const roobetLogo = '/assets/rainbetlogo.png';
-const rewards = [125, 200, 100, 50, 25];
+const rewards = [300, 150, 50];
 
 function updateCountdown() {
   const el = document.getElementById("countdown");
