--- a/leaderboard/shock/index.html
+++ b/leaderboard/shock/index.html
@@ -560,7 +560,7 @@
                     counts towards your score. <br>
                     <i>The leaderboard updates every 15 minutes.</i><br>
                     <div class="warning-message">
-                        Every Bet Counts!
+                        To claim prizes, you need to atleast have 20k wagered!
                     </div>
                         <button id="rulesButton" class="prev-lb-btn"
                             style="background: #ff8e3c; cursor: pointer; border: none;">
